compilers/y.output
Terminals unused in grammar

   LINEBREAK
   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID OBRACE typeDeclarations CBRACE

    2 typeDeclarations: typeDeclarations MethodDecl
    3                 | typeDeclarations FieldDecl
    4                 | typeDeclarations SEMI
    5                 | %empty

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclAux SEMI
    7          | PUBLIC STATIC Type ID SEMI
    8          | error SEMI

    9 Type: BOOLEAN
   10     | INT
   11     | DOUBLE

   12 FieldDeclAux: COMMA ID FieldDeclAux
   13             | COMMA ID

   14 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   15 MethodHeader: Type ID OCURV CCURV
   16             | Type ID OCURV FormalParams CCURV
   17             | VOID ID OCURV CCURV
   18             | VOID ID OCURV FormalParams CCURV

   19 FormalParams: Type ID FormalParamsAux
   20             | Type ID
   21             | STR OSQUARE CSQUARE ID

   22 FormalParamsAux: COMMA Type ID FormalParamsAux
   23                | COMMA Type ID

   24 MethodBody: OBRACE MethodBodyAux CBRACE

   25 MethodBodyAux: MethodBodyAux VarDecl
   26              | MethodBodyAux Statement
   27              | %empty

   28 VarDecl: Type ID VarDeclAux SEMI
   29        | Type ID SEMI

   30 VarDeclAux: COMMA ID VarDeclAux
   31           | COMMA ID

   32 Statement: OBRACE CBRACE
   33          | SEMI
   34          | OBRACE StatementAux CBRACE
   35          | IfStatement
   36          | WhileStatement
   37          | DoWhileStatement
   38          | PrintStatement
   39          | Assignment SEMI
   40          | MethodInvocation SEMI
   41          | ParseArgs SEMI
   42          | ReturnStatement
   43          | error SEMI

   44 IfStatement: IF OCURV Expression CCURV Statement
   45            | IF OCURV Expression CCURV Statement ELSE Statement

   46 WhileStatement: WHILE OCURV Expression CCURV Statement

   47 DoWhileStatement: DO Statement WHILE OCURV Expression CCURV SEMI

   48 PrintStatement: PRINT OCURV Expression CCURV SEMI
   49               | PRINT OCURV STRLIT CCURV SEMI

   50 Assignment: ID ASSIGN Expression

   51 MethodInvocation: ID OCURV CCURV
   52                 | ID OCURV Expression CCURV
   53                 | ID OCURV Expression MethodInvocationParams CCURV
   54                 | ID OCURV error CCURV

   55 MethodInvocationParams: MethodInvocationParams COMMA Expression
   56                       | COMMA Expression

   57 ParseArgs: PARSEINT OCURV ID OSQUARE Expression CSQUARE CCURV
   58          | PARSEINT OCURV error CCURV

   59 ReturnStatement: RETURN SEMI
   60                | RETURN Expression SEMI

   61 StatementAux: Statement
   62             | StatementAux Statement

   63 Expression: Assignment
   64           | ExpressionAux

   65 ExpressionAux: MethodInvocation
   66              | ParseArgs
   67              | ID
   68              | ID DOTLENGTH
   69              | OCURV Expression CCURV
   70              | PLUS ExpressionAux
   71              | MINUS ExpressionAux
   72              | NOT ExpressionAux
   73              | ExpressionAux EQ ExpressionAux
   74              | ExpressionAux GEQ ExpressionAux
   75              | ExpressionAux AND ExpressionAux
   76              | ExpressionAux OR ExpressionAux
   77              | ExpressionAux GT ExpressionAux
   78              | ExpressionAux LEQ ExpressionAux
   79              | ExpressionAux LT ExpressionAux
   80              | ExpressionAux NEQ ExpressionAux
   81              | ExpressionAux STAR ExpressionAux
   82              | ExpressionAux DIV ExpressionAux
   83              | ExpressionAux MOD ExpressionAux
   84              | ExpressionAux PLUS ExpressionAux
   85              | ExpressionAux MINUS ExpressionAux
   86              | DECLIT
   87              | BOOLLIT
   88              | REALLIT
   89              | OCURV error CCURV


Terminals, with rules where they appear

$end (0) 0
error (256) 8 43 54 58 89
precedencia (258)
BOOLEAN (259) 9
BOOLLIT (260) 87
CLASS (261) 1
DO (262) 47
DOTLENGTH (263) 68
DOUBLE (264) 11
ELSE (265) 45
IF (266) 44 45
INT (267) 10
PARSEINT (268) 57 58
PRINT (269) 48 49
PUBLIC (270) 6 7 14
RETURN (271) 59 60
STATIC (272) 6 7 14
STR (273) 21
VOID (274) 17 18
WHILE (275) 46 47
OCURV (276) 15 16 17 18 44 45 46 47 48 49 51 52 53 54 57 58 69 89
CCURV (277) 15 16 17 18 44 45 46 47 48 49 51 52 53 54 57 58 69 89
OBRACE (278) 1 24 32 34
CBRACE (279) 1 24 32 34
OSQUARE (280) 21 57
CSQUARE (281) 21 57
AND (282) 75
OR (283) 76
LT (284) 79
GT (285) 77
EQ (286) 73
NEQ (287) 80
LEQ (288) 78
GEQ (289) 74
PLUS (290) 70 84
MINUS (291) 71 85
STAR (292) 81
DIV (293) 82
MOD (294) 83
NOT (295) 72
ASSIGN (296) 50
SEMI (297) 4 6 7 8 28 29 33 39 40 41 43 47 48 49 59 60
COMMA (298) 12 13 22 23 30 31 55 56
LINEBREAK (299)
RESERVED (300)
ID (301) 1 6 7 12 13 15 16 17 18 19 20 21 22 23 28 29 30 31 50 51 52
    53 54 57 67 68
DECLIT (302) 86
REALLIT (303) 88
STRLIT (304) 49
NO_ELSE (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
typeDeclarations (53)
    on left: 2 3 4 5, on right: 1 2 3 4
FieldDecl (54)
    on left: 6 7 8, on right: 3
Type (55)
    on left: 9 10 11, on right: 6 7 15 16 19 20 22 23 28 29
FieldDeclAux (56)
    on left: 12 13, on right: 6 12
MethodDecl (57)
    on left: 14, on right: 2
MethodHeader (58)
    on left: 15 16 17 18, on right: 14
FormalParams (59)
    on left: 19 20 21, on right: 16 18
FormalParamsAux (60)
    on left: 22 23, on right: 19 22
MethodBody (61)
    on left: 24, on right: 14
MethodBodyAux (62)
    on left: 25 26 27, on right: 24 25 26
VarDecl (63)
    on left: 28 29, on right: 25
VarDeclAux (64)
    on left: 30 31, on right: 28 30
Statement (65)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43, on right: 26 44 45
    46 47 61 62
IfStatement (66)
    on left: 44 45, on right: 35
WhileStatement (67)
    on left: 46, on right: 36
DoWhileStatement (68)
    on left: 47, on right: 37
PrintStatement (69)
    on left: 48 49, on right: 38
Assignment (70)
    on left: 50, on right: 39 63
MethodInvocation (71)
    on left: 51 52 53 54, on right: 40 65
MethodInvocationParams (72)
    on left: 55 56, on right: 53 55
ParseArgs (73)
    on left: 57 58, on right: 41 66
ReturnStatement (74)
    on left: 59 60, on right: 42
StatementAux (75)
    on left: 61 62, on right: 34 62
Expression (76)
    on left: 63 64, on right: 44 45 46 47 48 50 52 53 55 56 57 60 69
ExpressionAux (77)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89, on right: 64 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID OBRACE typeDeclarations CBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . OBRACE typeDeclarations CBRACE

    OBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID OBRACE . typeDeclarations CBRACE

    $default  reduce using rule 5 (typeDeclarations)

    typeDeclarations  go to state 6


State 6

    1 Program: CLASS ID OBRACE typeDeclarations . CBRACE
    2 typeDeclarations: typeDeclarations . MethodDecl
    3                 | typeDeclarations . FieldDecl
    4                 | typeDeclarations . SEMI

    error   shift, and go to state 7
    PUBLIC  shift, and go to state 8
    CBRACE  shift, and go to state 9
    SEMI    shift, and go to state 10

    FieldDecl   go to state 11
    MethodDecl  go to state 12


State 7

    8 FieldDecl: error . SEMI

    SEMI  shift, and go to state 13


State 8

    6 FieldDecl: PUBLIC . STATIC Type ID FieldDeclAux SEMI
    7          | PUBLIC . STATIC Type ID SEMI
   14 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody

    STATIC  shift, and go to state 14


State 9

    1 Program: CLASS ID OBRACE typeDeclarations CBRACE .

    $default  reduce using rule 1 (Program)


State 10

    4 typeDeclarations: typeDeclarations SEMI .

    $default  reduce using rule 4 (typeDeclarations)


State 11

    3 typeDeclarations: typeDeclarations FieldDecl .

    $default  reduce using rule 3 (typeDeclarations)


State 12

    2 typeDeclarations: typeDeclarations MethodDecl .

    $default  reduce using rule 2 (typeDeclarations)


State 13

    8 FieldDecl: error SEMI .

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 FieldDecl: PUBLIC STATIC . Type ID FieldDeclAux SEMI
    7          | PUBLIC STATIC . Type ID SEMI
   14 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody

    BOOLEAN  shift, and go to state 15
    DOUBLE   shift, and go to state 16
    INT      shift, and go to state 17
    VOID     shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

    9 Type: BOOLEAN .

    $default  reduce using rule 9 (Type)


State 16

   11 Type: DOUBLE .

    $default  reduce using rule 11 (Type)


State 17

   10 Type: INT .

    $default  reduce using rule 10 (Type)


State 18

   17 MethodHeader: VOID . ID OCURV CCURV
   18             | VOID . ID OCURV FormalParams CCURV

    ID  shift, and go to state 21


State 19

    6 FieldDecl: PUBLIC STATIC Type . ID FieldDeclAux SEMI
    7          | PUBLIC STATIC Type . ID SEMI
   15 MethodHeader: Type . ID OCURV CCURV
   16             | Type . ID OCURV FormalParams CCURV

    ID  shift, and go to state 22


State 20

   14 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    OBRACE  shift, and go to state 23

    MethodBody  go to state 24


State 21

   17 MethodHeader: VOID ID . OCURV CCURV
   18             | VOID ID . OCURV FormalParams CCURV

    OCURV  shift, and go to state 25


State 22

    6 FieldDecl: PUBLIC STATIC Type ID . FieldDeclAux SEMI
    7          | PUBLIC STATIC Type ID . SEMI
   15 MethodHeader: Type ID . OCURV CCURV
   16             | Type ID . OCURV FormalParams CCURV

    OCURV  shift, and go to state 26
    SEMI   shift, and go to state 27
    COMMA  shift, and go to state 28

    FieldDeclAux  go to state 29


State 23

   24 MethodBody: OBRACE . MethodBodyAux CBRACE

    $default  reduce using rule 27 (MethodBodyAux)

    MethodBodyAux  go to state 30


State 24

   14 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 14 (MethodDecl)


State 25

   17 MethodHeader: VOID ID OCURV . CCURV
   18             | VOID ID OCURV . FormalParams CCURV

    BOOLEAN  shift, and go to state 15
    DOUBLE   shift, and go to state 16
    INT      shift, and go to state 17
    STR      shift, and go to state 31
    CCURV    shift, and go to state 32

    Type          go to state 33
    FormalParams  go to state 34


State 26

   15 MethodHeader: Type ID OCURV . CCURV
   16             | Type ID OCURV . FormalParams CCURV

    BOOLEAN  shift, and go to state 15
    DOUBLE   shift, and go to state 16
    INT      shift, and go to state 17
    STR      shift, and go to state 31
    CCURV    shift, and go to state 35

    Type          go to state 33
    FormalParams  go to state 36


State 27

    7 FieldDecl: PUBLIC STATIC Type ID SEMI .

    $default  reduce using rule 7 (FieldDecl)


State 28

   12 FieldDeclAux: COMMA . ID FieldDeclAux
   13             | COMMA . ID

    ID  shift, and go to state 37


State 29

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclAux . SEMI

    SEMI  shift, and go to state 38


State 30

   24 MethodBody: OBRACE MethodBodyAux . CBRACE
   25 MethodBodyAux: MethodBodyAux . VarDecl
   26              | MethodBodyAux . Statement

    error     shift, and go to state 39
    BOOLEAN   shift, and go to state 15
    DO        shift, and go to state 40
    DOUBLE    shift, and go to state 16
    IF        shift, and go to state 41
    INT       shift, and go to state 17
    PARSEINT  shift, and go to state 42
    PRINT     shift, and go to state 43
    RETURN    shift, and go to state 44
    WHILE     shift, and go to state 45
    OBRACE    shift, and go to state 46
    CBRACE    shift, and go to state 47
    SEMI      shift, and go to state 48
    ID        shift, and go to state 49

    Type              go to state 50
    VarDecl           go to state 51
    Statement         go to state 52
    IfStatement       go to state 53
    WhileStatement    go to state 54
    DoWhileStatement  go to state 55
    PrintStatement    go to state 56
    Assignment        go to state 57
    MethodInvocation  go to state 58
    ParseArgs         go to state 59
    ReturnStatement   go to state 60


State 31

   21 FormalParams: STR . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 61


State 32

   17 MethodHeader: VOID ID OCURV CCURV .

    $default  reduce using rule 17 (MethodHeader)


State 33

   19 FormalParams: Type . ID FormalParamsAux
   20             | Type . ID

    ID  shift, and go to state 62


State 34

   18 MethodHeader: VOID ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 63


State 35

   15 MethodHeader: Type ID OCURV CCURV .

    $default  reduce using rule 15 (MethodHeader)


State 36

   16 MethodHeader: Type ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 64


State 37

   12 FieldDeclAux: COMMA ID . FieldDeclAux
   13             | COMMA ID .

    COMMA  shift, and go to state 28

    $default  reduce using rule 13 (FieldDeclAux)

    FieldDeclAux  go to state 65


State 38

    6 FieldDecl: PUBLIC STATIC Type ID FieldDeclAux SEMI .

    $default  reduce using rule 6 (FieldDecl)


State 39

   43 Statement: error . SEMI

    SEMI  shift, and go to state 66


State 40

   47 DoWhileStatement: DO . Statement WHILE OCURV Expression CCURV SEMI

    error     shift, and go to state 39
    DO        shift, and go to state 40
    IF        shift, and go to state 41
    PARSEINT  shift, and go to state 42
    PRINT     shift, and go to state 43
    RETURN    shift, and go to state 44
    WHILE     shift, and go to state 45
    OBRACE    shift, and go to state 46
    SEMI      shift, and go to state 48
    ID        shift, and go to state 49

    Statement         go to state 67
    IfStatement       go to state 53
    WhileStatement    go to state 54
    DoWhileStatement  go to state 55
    PrintStatement    go to state 56
    Assignment        go to state 57
    MethodInvocation  go to state 58
    ParseArgs         go to state 59
    ReturnStatement   go to state 60


State 41

   44 IfStatement: IF . OCURV Expression CCURV Statement
   45            | IF . OCURV Expression CCURV Statement ELSE Statement

    OCURV  shift, and go to state 68


State 42

   57 ParseArgs: PARSEINT . OCURV ID OSQUARE Expression CSQUARE CCURV
   58          | PARSEINT . OCURV error CCURV

    OCURV  shift, and go to state 69


State 43

   48 PrintStatement: PRINT . OCURV Expression CCURV SEMI
   49               | PRINT . OCURV STRLIT CCURV SEMI

    OCURV  shift, and go to state 70


State 44

   59 ReturnStatement: RETURN . SEMI
   60                | RETURN . Expression SEMI

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    SEMI      shift, and go to state 76
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 83
    ExpressionAux     go to state 84


State 45

   46 WhileStatement: WHILE . OCURV Expression CCURV Statement

    OCURV  shift, and go to state 85


State 46

   32 Statement: OBRACE . CBRACE
   34          | OBRACE . StatementAux CBRACE

    error     shift, and go to state 39
    DO        shift, and go to state 40
    IF        shift, and go to state 41
    PARSEINT  shift, and go to state 42
    PRINT     shift, and go to state 43
    RETURN    shift, and go to state 44
    WHILE     shift, and go to state 45
    OBRACE    shift, and go to state 46
    CBRACE    shift, and go to state 86
    SEMI      shift, and go to state 48
    ID        shift, and go to state 49

    Statement         go to state 87
    IfStatement       go to state 53
    WhileStatement    go to state 54
    DoWhileStatement  go to state 55
    PrintStatement    go to state 56
    Assignment        go to state 57
    MethodInvocation  go to state 58
    ParseArgs         go to state 59
    ReturnStatement   go to state 60
    StatementAux      go to state 88


State 47

   24 MethodBody: OBRACE MethodBodyAux CBRACE .

    $default  reduce using rule 24 (MethodBody)


State 48

   33 Statement: SEMI .

    $default  reduce using rule 33 (Statement)


State 49

   50 Assignment: ID . ASSIGN Expression
   51 MethodInvocation: ID . OCURV CCURV
   52                 | ID . OCURV Expression CCURV
   53                 | ID . OCURV Expression MethodInvocationParams CCURV
   54                 | ID . OCURV error CCURV

    OCURV   shift, and go to state 89
    ASSIGN  shift, and go to state 90


State 50

   28 VarDecl: Type . ID VarDeclAux SEMI
   29        | Type . ID SEMI

    ID  shift, and go to state 91


State 51

   25 MethodBodyAux: MethodBodyAux VarDecl .

    $default  reduce using rule 25 (MethodBodyAux)


State 52

   26 MethodBodyAux: MethodBodyAux Statement .

    $default  reduce using rule 26 (MethodBodyAux)


State 53

   35 Statement: IfStatement .

    $default  reduce using rule 35 (Statement)


State 54

   36 Statement: WhileStatement .

    $default  reduce using rule 36 (Statement)


State 55

   37 Statement: DoWhileStatement .

    $default  reduce using rule 37 (Statement)


State 56

   38 Statement: PrintStatement .

    $default  reduce using rule 38 (Statement)


State 57

   39 Statement: Assignment . SEMI

    SEMI  shift, and go to state 92


State 58

   40 Statement: MethodInvocation . SEMI

    SEMI  shift, and go to state 93


State 59

   41 Statement: ParseArgs . SEMI

    SEMI  shift, and go to state 94


State 60

   42 Statement: ReturnStatement .

    $default  reduce using rule 42 (Statement)


State 61

   21 FormalParams: STR OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 95


State 62

   19 FormalParams: Type ID . FormalParamsAux
   20             | Type ID .

    COMMA  shift, and go to state 96

    $default  reduce using rule 20 (FormalParams)

    FormalParamsAux  go to state 97


State 63

   18 MethodHeader: VOID ID OCURV FormalParams CCURV .

    $default  reduce using rule 18 (MethodHeader)


State 64

   16 MethodHeader: Type ID OCURV FormalParams CCURV .

    $default  reduce using rule 16 (MethodHeader)


State 65

   12 FieldDeclAux: COMMA ID FieldDeclAux .

    $default  reduce using rule 12 (FieldDeclAux)


State 66

   43 Statement: error SEMI .

    $default  reduce using rule 43 (Statement)


State 67

   47 DoWhileStatement: DO Statement . WHILE OCURV Expression CCURV SEMI

    WHILE  shift, and go to state 98


State 68

   44 IfStatement: IF OCURV . Expression CCURV Statement
   45            | IF OCURV . Expression CCURV Statement ELSE Statement

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 99
    ExpressionAux     go to state 84


State 69

   57 ParseArgs: PARSEINT OCURV . ID OSQUARE Expression CSQUARE CCURV
   58          | PARSEINT OCURV . error CCURV

    error  shift, and go to state 100
    ID     shift, and go to state 101


State 70

   48 PrintStatement: PRINT OCURV . Expression CCURV SEMI
   49               | PRINT OCURV . STRLIT CCURV SEMI

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79
    STRLIT    shift, and go to state 102

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 103
    ExpressionAux     go to state 84


State 71

   87 ExpressionAux: BOOLLIT .

    $default  reduce using rule 87 (ExpressionAux)


State 72

   69 ExpressionAux: OCURV . Expression CCURV
   89              | OCURV . error CCURV

    error     shift, and go to state 104
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 105
    ExpressionAux     go to state 84


State 73

   70 ExpressionAux: PLUS . ExpressionAux

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 106
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    ExpressionAux     go to state 107


State 74

   71 ExpressionAux: MINUS . ExpressionAux

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 106
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    ExpressionAux     go to state 108


State 75

   72 ExpressionAux: NOT . ExpressionAux

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 106
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    ExpressionAux     go to state 109


State 76

   59 ReturnStatement: RETURN SEMI .

    $default  reduce using rule 59 (ReturnStatement)


State 77

   50 Assignment: ID . ASSIGN Expression
   51 MethodInvocation: ID . OCURV CCURV
   52                 | ID . OCURV Expression CCURV
   53                 | ID . OCURV Expression MethodInvocationParams CCURV
   54                 | ID . OCURV error CCURV
   67 ExpressionAux: ID .
   68              | ID . DOTLENGTH

    DOTLENGTH  shift, and go to state 110
    OCURV      shift, and go to state 89
    ASSIGN     shift, and go to state 90

    $default  reduce using rule 67 (ExpressionAux)


State 78

   86 ExpressionAux: DECLIT .

    $default  reduce using rule 86 (ExpressionAux)


State 79

   88 ExpressionAux: REALLIT .

    $default  reduce using rule 88 (ExpressionAux)


State 80

   63 Expression: Assignment .

    $default  reduce using rule 63 (Expression)


State 81

   65 ExpressionAux: MethodInvocation .

    $default  reduce using rule 65 (ExpressionAux)


State 82

   66 ExpressionAux: ParseArgs .

    $default  reduce using rule 66 (ExpressionAux)


State 83

   60 ReturnStatement: RETURN Expression . SEMI

    SEMI  shift, and go to state 111


State 84

   64 Expression: ExpressionAux .
   73 ExpressionAux: ExpressionAux . EQ ExpressionAux
   74              | ExpressionAux . GEQ ExpressionAux
   75              | ExpressionAux . AND ExpressionAux
   76              | ExpressionAux . OR ExpressionAux
   77              | ExpressionAux . GT ExpressionAux
   78              | ExpressionAux . LEQ ExpressionAux
   79              | ExpressionAux . LT ExpressionAux
   80              | ExpressionAux . NEQ ExpressionAux
   81              | ExpressionAux . STAR ExpressionAux
   82              | ExpressionAux . DIV ExpressionAux
   83              | ExpressionAux . MOD ExpressionAux
   84              | ExpressionAux . PLUS ExpressionAux
   85              | ExpressionAux . MINUS ExpressionAux

    AND    shift, and go to state 112
    OR     shift, and go to state 113
    LT     shift, and go to state 114
    GT     shift, and go to state 115
    EQ     shift, and go to state 116
    NEQ    shift, and go to state 117
    LEQ    shift, and go to state 118
    GEQ    shift, and go to state 119
    PLUS   shift, and go to state 120
    MINUS  shift, and go to state 121
    STAR   shift, and go to state 122
    DIV    shift, and go to state 123
    MOD    shift, and go to state 124

    $default  reduce using rule 64 (Expression)


State 85

   46 WhileStatement: WHILE OCURV . Expression CCURV Statement

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 125
    ExpressionAux     go to state 84


State 86

   32 Statement: OBRACE CBRACE .

    $default  reduce using rule 32 (Statement)


State 87

   61 StatementAux: Statement .

    $default  reduce using rule 61 (StatementAux)


State 88

   34 Statement: OBRACE StatementAux . CBRACE
   62 StatementAux: StatementAux . Statement

    error     shift, and go to state 39
    DO        shift, and go to state 40
    IF        shift, and go to state 41
    PARSEINT  shift, and go to state 42
    PRINT     shift, and go to state 43
    RETURN    shift, and go to state 44
    WHILE     shift, and go to state 45
    OBRACE    shift, and go to state 46
    CBRACE    shift, and go to state 126
    SEMI      shift, and go to state 48
    ID        shift, and go to state 49

    Statement         go to state 127
    IfStatement       go to state 53
    WhileStatement    go to state 54
    DoWhileStatement  go to state 55
    PrintStatement    go to state 56
    Assignment        go to state 57
    MethodInvocation  go to state 58
    ParseArgs         go to state 59
    ReturnStatement   go to state 60


State 89

   51 MethodInvocation: ID OCURV . CCURV
   52                 | ID OCURV . Expression CCURV
   53                 | ID OCURV . Expression MethodInvocationParams CCURV
   54                 | ID OCURV . error CCURV

    error     shift, and go to state 128
    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    CCURV     shift, and go to state 129
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 130
    ExpressionAux     go to state 84


State 90

   50 Assignment: ID ASSIGN . Expression

    BOOLLIT   shift, and go to state 71
    PARSEINT  shift, and go to state 42
    OCURV     shift, and go to state 72
    PLUS      shift, and go to state 73
    MINUS     shift, and go to state 74
    NOT       shift, and go to state 75
    ID        shift, and go to state 77
    DECLIT    shift, and go to state 78
    REALLIT   shift, and go to state 79

    Assignment        go to state 80
    MethodInvocation  go to state 81
    ParseArgs         go to state 82
    Expression        go to state 131
    ExpressionAux     go to state 84


State 91

   28 VarDecl: Type ID . VarDeclAux SEMI
   29        | Type ID . SEMI

    SEMI   shift, and go to state 132
    COMMA  shift, and go to state 133

    VarDeclAux  go to state 134


State 92

   39 Statement: Assignment SEMI .

    $default  reduce using rule 39 (Statement)


State 93

   40 Statement: MethodInvocation SEMI .

    $default  reduce using rule 40 (Statement)


State 94

   41 Statement: ParseArgs SEMI .

    $default  reduce using rule 41 (Statement)


State 95

   21 FormalParams: STR OSQUARE CSQUARE . ID

    ID  shift, and go to state 135


State 96

   22 FormalParamsAux: COMMA . Type ID FormalParamsAux
   23                | COMMA . Type ID

    BOOLEAN  shift, and go to state 15
    DOUBLE   shift, and go to state 16
    INT      shift, and go to state 17

    Type  go to state 136


State 97

   19 FormalParams: Type ID FormalParamsAux .

    $default  reduce using rule 19 (FormalParams)


State 98

   47 DoWhileStatement: DO Statement WHILE . OCURV Expression CCURV SEMI

    OCURV  shift, and go to state 137


State 99

   44 IfStatement: IF OCURV Expression . CCURV Statement
   45            | IF OCURV Expression . CCURV Statement ELSE Statement

    CCURV  shift, and go to state 138


State 100

   58 ParseArgs: PARSEINT OCURV error . CCURV

    CCURV  shift, and go to state 139


State 101

   57 ParseArgs: PARSEINT OCURV ID . OSQUARE Expression CSQUARE CCURV

    OSQUARE  shift, and go to state 140


State 102

   49 PrintStatement: PRINT OCURV STRLIT . CCURV SEMI

    CCURV  shift, and go to state 141


State 103

   48 PrintStatement: PRINT OCURV Expression . CCURV SEMI

    CCURV  shift, and go to state 142


State 104

   89 ExpressionAux: OCURV error . CCURV

    CCURV  shift, and go to state 143


State 105

   69 ExpressionAux: OCURV Expression . CCURV

    CCURV  shift, and go to state 144


State 106

   51 MethodInvocation: ID . OCURV CCURV
   52                 | ID . OCURV Expression CCURV
   53                 | ID . OCURV Expression MethodInvocationParams CCURV
   54                 | ID . OCURV error CCURV
   67 ExpressionAux: ID .
   68              | ID . DOTLENGTH

    DOTLENGTH  shift, and go to state 110
    OCURV      shift, and go to state 89

    $default  reduce using rule 67 (ExpressionAux)


State 107

   70 ExpressionAux: PLUS ExpressionAux .
   73              | ExpressionAux . EQ ExpressionAux
   74              | ExpressionAux . GEQ ExpressionAux
   75              | ExpressionAux . AND ExpressionAux
   76              | ExpressionAux . OR ExpressionAux
   77              | ExpressionAux . GT ExpressionAux
   78              | ExpressionAux . LEQ ExpressionAux
   79              | ExpressionAux . LT ExpressionAux
   80              | ExpressionAux . NEQ ExpressionAux
   81              | ExpressionAux . STAR ExpressionAux
   82              | ExpressionAux . DIV ExpressionAux
   83              | ExpressionAux . MOD ExpressionAux
   84              | ExpressionAux . PLUS ExpressionAux
   85              | ExpressionAux . MINUS ExpressionAux

    $default  reduce using rule 70 (ExpressionAux)


State 108

   71 ExpressionAux: MINUS ExpressionAux .
   73              | ExpressionAux . EQ ExpressionAux
   74              | ExpressionAux . GEQ ExpressionAux
   75              | ExpressionAux . AND ExpressionAux
   76              | ExpressionAux . OR ExpressionAux
   77              | ExpressionAux . GT ExpressionAux
   78              | ExpressionAux . LEQ ExpressionAux
   79              | ExpressionAux . LT ExpressionAux
   80              | ExpressionAux . NEQ ExpressionAux
   81              | ExpressionAux . STAR ExpressionAux
   82              | ExpressionAux . DIV ExpressionAux
   83              | ExpressionAux . MOD ExpressionAux
   84              | ExpressionAux . PLUS ExpressionAux
   85              | ExpressionAux . MINUS ExpressionAux

    $default  reduce using rule 71 (ExpressionAux)


State 109

   72 ExpressionAux: NOT ExpressionAux .
   73              | ExpressionAux . EQ ExpressionAux
   74              | ExpressionAux . GEQ ExpressionAux
   75              | ExpressionAux . AND ExpressionAux
   76              | ExpressionAux . OR ExpressionAux
   77              | ExpressionAux . GT ExpressionAux
   78              | ExpressionAux . LEQ ExpressionAux
   79              | ExpressionAux . LT ExpressionAux
   80              | ExpressionAux . NEQ ExpressionAux
   81              | ExpressionAux . STAR ExpressionAux
   82              | ExpressionAux . DIV ExpressionAux
   83              | ExpressionAux . MOD ExpressionAux
   84              | ExpressionAux . PLUS ExpressionAux
   85              | ExpressionAux . MINUS ExpressionAux
